syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.datalake.drms;

import "google/api/annotations.proto";

message DRMSServiceAuthToken {
    string access_token = 1;
}